[tool.poetry]
name = "polytest"
version = "0.1.0"
description = "**PolyTest** is a language-agnostic test runner for VSCode, designed to seamlessly integrate with various testing frameworks across multiple programming languages."
authors = ["Jayasimha Raghavan <mr.jayasimha@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
